<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.github.branflake2267.archetypes</groupId>
  <artifactId>gwt-basic-rpc-appengine-jpa</artifactId>
  <packaging>war</packaging>
  <version>1.0-SNAPSHOT</version>
  <name>gwt-basic-rpc-appengine-jpa</name>
  <description>GWT with RPC using App Engine and JPA persistence</description>

  <!-- App Engine Goals -->
  <!-- mvn help:describe -Dplugin=appengine -->

  <!-- Running with Maven -->
  <!-- mvn clean install -->
  <!-- mvn appengine:devserver_start - start web server -->
  <!-- mvn gwt:run-codeserver - start gwt code server -->
  <!-- goto http://localhost:8080 -->
  <!-- mvn appengine:devserver_stop - stop web server -->

  <properties>
    <!-- GWT -->
    <gwt.version>2.7.0</gwt.version>
    <gwt.style>OBF</gwt.style>

    <!-- App Engine -->
    <appengine.version>1.9.21</appengine.version>
    <datanucleus.version>3.1.1</datanucleus.version>

    <!-- Maven -->
    <guice.version>4.0-beta5</guice.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>    
  </properties>

  <build>
    <outputDirectory>${project.build.directory}/${project.build.finalName}/WEB-INF/classes</outputDirectory>

    <resources>
      <resource>
        <directory>src/main/resources</directory>
      </resource>
    </resources>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.1</version>
        <configuration>
          <source>1.7</source>
          <target>1.7</target>
          <encoding>UTF-8</encoding>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>versions-maven-plugin</artifactId>
        <version>2.1</version>
        <executions>
          <execution>
            <phase>validate</phase>
            <goals>
              <goal>display-dependency-updates</goal>
              <goal>display-plugin-updates</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <!-- Ignore GWTTestCases when running JUnit Runner -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.18</version>
        <configuration>
          <includes>
            <include>**/*Test.java</include>
          </includes>
          <excludes>
            <exclude>**/*GwtTest.java</exclude>
          </excludes>
        </configuration>
      </plugin>

      <!-- GWT -->
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>gwt-maven-plugin</artifactId>
        <version>${gwt.version}</version>
        <configuration>
          <strict>true</strict>

          <testTimeOut>180</testTimeOut>
          <mode>htmlunit</mode>
          <!-- Switch to a suite to run tests faster -->
          <!-- <includes>**/*GwtTestSuite.java</includes> -->
          <!-- <excludes>**/*GwtTest.java</excludes> -->
          <includes>**/*GwtTest.java</includes>

          <extraJvmArgs>-Xmx1G -XX:MaxPermSize=256M</extraJvmArgs>
          <logLevel>INFO</logLevel>
          <style>${gwt.style}</style>

          <!-- mvn gwt:run-codeserver - won't have to use the bookmarklet -->
          <launcherDir>${project.build.directory}/${project.build.finalName}</launcherDir>

          <runTarget>Project.html</runTarget>
          <modules>
            <module>org.gonevertical.project.Project</module>
          </modules>
        </configuration>
      </plugin>

      <!-- appengine:devserver_start - start web server -->
      <!-- appengine:devserver_stop - stop web server -->
      <plugin>
        <groupId>com.google.appengine</groupId>
        <artifactId>appengine-maven-plugin</artifactId>
        <version>${appengine.version}</version>
        <configuration>
          <enableJarClasses>false</enableJarClasses>
          <!-- Comment in the below snippet to bind to all IPs instead of just localhost -->
          <!-- <address>0.0.0.0</address> <port>8080</port> -->
          <!-- Comment in the below snippet to enable local debugging with a remove debugger like those included with Eclipse 
            or IntelliJ -->
          <!-- <jvmFlags><jvmFlag>-agentlib:jdwp=transport=dt_socket,address=8000,server=y,suspend=n</jvmFlag></jvmFlags> -->
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>endpoints_get_discovery_doc</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-war-plugin</artifactId>
        <version>2.4</version>
        <configuration>
          <webXml>${project.build.directory}/generated-sources/appengine-endpoints/WEB-INF/web.xml</webXml>
          <webResources>
            <resource>
              <!-- this is relative to the pom.xml directory -->
              <directory>${project.build.directory}/generated-sources/appengine-endpoints</directory>
              <!-- the list has a default value of ** -->
              <includes>
                <include>WEB-INF/*.discovery</include>
                <include>WEB-INF/*.api</include>
              </includes>
            </resource>
          </webResources>
        </configuration>
      </plugin>
      
      <!-- Persistence Enhancer -->
      <plugin>
        <groupId>org.datanucleus</groupId>
        <artifactId>maven-datanucleus-plugin</artifactId>
        <version>${datanucleus.version}</version>
        <configuration>
          <api>JPA</api>
          <mappingIncludes>**/entities/*.class</mappingIncludes>
          <verbose>true</verbose>
        </configuration>
        <dependencies>
          <dependency>
            <groupId>org.datanucleus</groupId>
            <artifactId>datanucleus-core</artifactId>
            <version>${datanucleus.version}</version>
          </dependency>
        </dependencies>
        <executions>
          <execution>
            <phase>compile</phase>
            <goals>
              <goal>enhance</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>

    <pluginManagement>
      <plugins>
        <!-- Eclipse m2e Enhancing -->
        <plugin>
          <groupId>org.eclipse.m2e</groupId>
          <artifactId>lifecycle-mapping</artifactId>
          <version>1.0.0</version>
          <configuration>
            <lifecycleMappingMetadata>
              <pluginExecutions>
                <pluginExecution>
                  <pluginExecutionFilter>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>versions-maven-plugin</artifactId>
                    <versionRange>[2.1,)</versionRange>
                    <goals>
                      <goal>display-plugin-updates</goal>
                      <goal>display-dependency-updates</goal>
                    </goals>
                  </pluginExecutionFilter>
                  <action>
                    <ignore />
                  </action>
                </pluginExecution>
                
                <pluginExecution>
                  <pluginExecutionFilter>
                    <groupId>org.datanucleus</groupId>
                    <artifactId>maven-datanucleus-plugin</artifactId>
                    <versionRange>${datanucleus.version}</versionRange>
                    <goals>
                      <goal>enhance</goal>
                    </goals>
                  </pluginExecutionFilter>
                  <action>
                    <ignore />
                  </action>
                </pluginExecution>

                <pluginExecution>
                  <pluginExecutionFilter>
                    <groupId>com.google.appengine</groupId>
                    <artifactId>appengine-maven-plugin</artifactId>
                    <versionRange>[${appengine.version},)</versionRange>
                    <goals>
                      <goal>endpoints_get_client_lib</goal>
                    </goals>
                  </pluginExecutionFilter>
                  <action>
                    <execute>
                      <runOnIncremental>true</runOnIncremental>
                      <runOnConfiguration>true</runOnConfiguration>
                    </execute>
                  </action>
                </pluginExecution>
              </pluginExecutions>
            </lifecycleMappingMetadata>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <dependencies>
    <!-- GWT -->
    <dependency>
      <groupId>com.google.gwt</groupId>
      <artifactId>gwt-user</artifactId>
      <version>${gwt.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.google.gwt</groupId>
      <artifactId>gwt-codeserver</artifactId>
      <version>${gwt.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.google.gwt</groupId>
      <artifactId>gwt-servlet</artifactId>
      <version>${gwt.version}</version>
    </dependency>

    <!-- Google App Engine -->
    <dependency>
      <groupId>com.google.appengine</groupId>
      <artifactId>appengine-api-1.0-sdk</artifactId>
      <version>${appengine.version}</version>
    </dependency>
    <dependency>
      <groupId>com.google.appengine</groupId>
      <artifactId>appengine-endpoints</artifactId>
      <version>${appengine.version}</version>
    </dependency>
    <dependency>
      <groupId>com.google.appengine</groupId>
      <artifactId>appengine-java-sdk</artifactId>
      <version>${appengine.version}</version>
      <scope>provided</scope>
      <type>zip</type>
    </dependency>
    <dependency>
      <groupId>javax.servlet</groupId>
      <artifactId>servlet-api</artifactId>
      <version>2.5</version>
      <scope>provided</scope>
    </dependency>
    
    <!-- Persistence -->
    <!-- Datanucleus Entities Enhancer -->
    <dependency>
      <groupId>org.datanucleus</groupId>
      <artifactId>datanucleus-api-jpa</artifactId>
      <version>${datanucleus.version}</version>
    </dependency>
    <dependency>
      <groupId>org.datanucleus</groupId>
      <artifactId>datanucleus-core</artifactId>
      <version>${datanucleus.version}</version>
    </dependency>
    <dependency>
      <groupId>com.google.appengine.orm</groupId>
      <artifactId>datanucleus-appengine</artifactId>
      <version>2.1.2</version>
    </dependency>
    <!-- JPA/JDO -->
    <dependency>
      <groupId>javax.jdo</groupId>
      <artifactId>jdo-api</artifactId>
      <version>3.0.1</version>
    </dependency>
    <!-- JPA spec 2.0 -->
    <dependency>
      <groupId>org.apache.geronimo.specs</groupId>
      <artifactId>geronimo-jpa_2.0_spec</artifactId>
      <version>1.1</version>
    </dependency>

    <!-- Testing -->
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-all</artifactId>
      <version>2.0.2-beta</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.google.appengine</groupId>
      <artifactId>appengine-testing</artifactId>
      <version>${appengine.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.google.appengine</groupId>
      <artifactId>appengine-api-stubs</artifactId>
      <version>${appengine.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
</project>
